set zoom same in all charts

--- a/journal/202005.md
+++ b/journal/202005.md
@@ -161,7 +161,7 @@ https://blockcommons.red/politeia-digest/issue031/
 
 Hashrate: [May's hashrate](https://explorer.dcrdata.org/charts?chart=hashrate&zoom=k9nb7wvw-kavn2b1a&scale=linear&bin=block&axis=time) opened at ~357 Ph/s and closed ~386 Ph/s, bottoming at 260 Ph/s and peaking at 541 Ph/s throughout the month. Pool [hashrate distribution](https://dcrstats.com/pow) as of June 1: UUPool 38%, Poolin 18.5%, lab.antpool.com 11.5%, F2Pool 1.5%, Luxor 1.25%, BTC.com 1.25%, BeePool 0.09%, CoinMine 0.03%, Suprnova 0.02% and others ~27.8%. Pool distribution numbers are approximate and cannot be accurately determined.
 
-Staking: [30-day average](https://dcrstats.com/) ticket price was 141.48 DCR (+3.68). The [price](https://explorer.dcrdata.org/charts?chart=ticket-price&zoom=k9neldep-kauuzva7&bin=window&axis=time&visibility=true-false&mode=stepped) varied between 132.8-159.1 DCR. [Locked amount](https://explorer.dcrdata.org/charts?chart=ticket-pool-value&zoom=k9n7gd71-kauoiwzr&scale=linear&bin=block&axis=time&visibility=true-false&mode=stepped) was 5.59-5.8 million DCR, which corresponded to 48.7-50.2% of the available supply [participating](https://explorer.dcrdata.org/charts?chart=stake-participation&zoom=k9n7gd71-kauoiwzr&scale=linear&bin=block&axis=time&visibility=true-false) in PoS.
+Staking: [30-day average](https://dcrstats.com/) ticket price was 141.48 DCR (+3.68). The [price](https://explorer.dcrdata.org/charts?chart=ticket-price&zoom=k9nb7wvw-kavn2b1a&bin=window&axis=time&visibility=true-false&mode=stepped) varied between 132.8-159.1 DCR. [Locked amount](https://explorer.dcrdata.org/charts?chart=ticket-pool-value&zoom=k9nb7wvw-kavn2b1a&scale=linear&bin=block&axis=time&visibility=true-false&mode=stepped) was 5.59-5.8 million DCR, which corresponded to 48.7-50.2% of the available supply [participating](https://explorer.dcrdata.org/charts?chart=stake-participation&zoom=k9nb7wvw-kavn2b1a&scale=linear&bin=block&axis=time&visibility=true-false) in PoS.
 
 { hint: second source for locked %: https://charts.dcr.farm/d/000000003/proof-of-stake?orgId=1&from=now-40d&to=now }
 
