--- a/journal/202005.md
+++ b/journal/202005.md
@@ -291,7 +291,7 @@ Selected Twitter discussions:
 
 ## Markets
 
-In May DCR was trading between USD {n.nn}-{n.nn} / BTC {}-{}. The average daily rate was ${n.nn}.
+In May DCR was trading between USD 12.62-15.66 / BTC 0.0014-0.00167. The average daily rate was $14.11.
 
 {markets overview: USD and BTC prices, highs and lows, interesting events, interesting analysis}
 
