--- a/journal/202005.md
+++ b/journal/202005.md
@@ -112,7 +112,15 @@ Testnet testing [has begun](https://twitter.com/chappjc/status/12671153986102558
 
 Testnet build of the v1.5 release is available on [Google Play](https://play.google.com/store/apps/details?id=com.decred.dcrandroid.testnet). Bug reports are welcome on [GitHub](https://github.com/decred/dcrandroid/issues).
 
-[dcrios](https://github.com/raedahgroup/dcrios): {}
+[dcrios](https://github.com/raedahgroup/dcrios):
+
+- [watch-only](https://github.com/raedahgroup/dcrios/pull/685) wallet support
+- blockchain [rescan](https://github.com/raedahgroup/dcrios/pull/675) implemented
+- Decred [logo](https://github.com/raedahgroup/dcrios/pull/674) on QR codes
+- [Polish](https://github.com/raedahgroup/dcrios/pull/683) translation ported from Android
+- multiple bug fixes
+
+Testnet build of the v1.5 release is available on [Apple TestFlight](https://testflight.apple.com/join/7KL4VnB2). Bug reports are welcome on [GitHub](https://github.com/raedahgroup/dcrios/issues).
 
 [dcrdata](https://github.com/decred/dcrdata):
 
