--- a/journal/202005.md
+++ b/journal/202005.md
@@ -136,7 +136,12 @@ In progress:
 - display Swap Contract and Swap Redemption labels for [atomic swap](https://github.com/decred/dcrdata/pull/1733) transactions
 - [/nextreduction](https://github.com/decred/dcrdata/pull/1753) page with a countdown till next block reward reduction and basic information about it (a fun entry point to share with people learning about Decred)
 
-[tinydecred](https://github.com/decred/tinydecred): {}
+[tinydecred](https://github.com/decred/tinydecred):
+
+- foundations for [SPV peer](https://github.com/decred/tinydecred/pulls?q=is%3Apr+merged%3A2020-05-01..2020-05-31+sort%3Aupdated-asc+spv) support
+- added BTC network [parameters](https://github.com/decred/tinydecred/pull/184) (first step for multi-asset support)
+- tooling to measure [test coverage](https://github.com/decred/tinydecred/pull/180)
+- [v0.1.0](https://github.com/decred/tinydecred/releases/tag/v0.1.0) is the first tagged release (_congrats!_)
 
 [docs](https://github.com/decred/dcrdocs):
 
