--- a/journal/202005.md
+++ b/journal/202005.md
@@ -157,7 +157,7 @@ Dev activity stats for May: {n} active PRs, {n} master commits, {n}K added and {
 
 ## People
 
-Welcome to new first time contributors with code merged to master: @rstaudt2 ([dcrd](https://github.com/decred/dcrd/commits?author=rstaudt2)), @song50119 ([dcrdex](https://github.com/decred/dcrdex/commits?author=song50119)), @dreacot ([dcrandroid](https://github.com/decred/dcrandroid/commits?author=dreacot)), @Ekeh ([dcrdata](https://github.com/decred/dcrdata/commits?author=Ekeh)), @guilhermemntt ([decrediton](https://github.com/decred/decrediton/commits?author=guilhermemntt)), @blaltarriba ([politeiagui](https://github.com/decred/politeiagui/commits?author=blaltarriba)) and @matthawkins90 ([dcrdocs](https://github.com/decred/dcrdocs/commits?author=matthawkins90))
+Welcome to new first time contributors with code merged to master: @blaltarriba ([politeiagui](https://github.com/decred/politeiagui/commits?author=blaltarriba)), @dreacot ([dcrandroid](https://github.com/decred/dcrandroid/commits?author=dreacot)), @Ekeh ([dcrdata](https://github.com/decred/dcrdata/commits?author=Ekeh)), @guilhermemntt ([decrediton](https://github.com/decred/decrediton/commits?author=guilhermemntt)), @rstaudt2 ([dcrd](https://github.com/decred/dcrd/commits?author=rstaudt2)) and @song50119 ([dcrdex](https://github.com/decred/dcrdex/commits?author=song50119)).
 
 {check for new DCCs}
 
