People add DCCs

--- a/journal/202005.md
+++ b/journal/202005.md
@@ -159,15 +159,9 @@ Dev activity stats for May: {n} active PRs, {n} master commits, {n}K added and {
 
 Welcome to new first time contributors with code merged to master: @blaltarriba ([politeiagui](https://github.com/decred/politeiagui/commits?author=blaltarriba)), @dreacot ([dcrandroid](https://github.com/decred/dcrandroid/commits?author=dreacot)), @Ekeh ([dcrdata](https://github.com/decred/dcrdata/commits?author=Ekeh)), @guilhermemntt ([decrediton](https://github.com/decred/decrediton/commits?author=guilhermemntt)), @rstaudt2 ([dcrd](https://github.com/decred/dcrd/commits?author=rstaudt2)) and @song50119 ([dcrdex](https://github.com/decred/dcrdex/commits?author=song50119)).
 
-{check for new DCCs}
+Congratulations to new contractors granted the Decred Contractor Clearance (DCC): [@camilolwi](https://twitter.com/Camilolwi) (marketing), [@itswisdomagain](https://github.com/itswisdomagain) (development), [@nachito](https://github.com/Reidiojed) (marketing),  [@tomee](https://twitter.com/tomasgroos) (marketing).
 
-{welcome new corporate contractors with short intros, if any}
-
-{updates from existing contractors}
-
-- Three Decred community members were [included](https://twitter.com/Decred_BR/status/1262454667700768769) in the list of top 50 names in the Brazilian Crypto Market by Cointelegraph: Rafaela Romano in #35, Gabriel Rhama in #31 and the number one Edilson Osório Jr.
-
-{interviews about people}
+Three Decred community members were [included](https://twitter.com/Decred_BR/status/1262454667700768769) in the list of top 50 names in the Brazilian Crypto Market by Cointelegraph: Rafaela Romano in #35, Gabriel Rhama in #31 and the number one Edilson Osório Jr.
 
 Community stats:
 
