--- a/journal/202005.md
+++ b/journal/202005.md
@@ -371,6 +371,6 @@ Your [feedback](https://github.com/xaur/decred-news/blob/docs/contributing.md#fe
 
 Credits (alphabetical order):
 
-- writing and editing: {}
+- writing and editing: bee, degeri, l1ndseymm
 - reviews and feedback: {}
 - title image: {}
