Dev feedback lukebp

--- a/journal/202005.md
+++ b/journal/202005.md
@@ -47,12 +47,12 @@ In progress:
 
 [Politeia](https://github.com/decred/politeia):
 
-- RFP process support on the [backend](https://github.com/decred/politeia/pull/1054) and the [GUI](https://github.com/decred/politeiagui/pull/1910) - big change long in development { how "done" is it? }
+- RFP process implemented in the [backend](https://github.com/decred/politeia/pull/1054) and the [GUI](https://github.com/decred/politeiagui/pull/1910) - big change long in development is in the final stages of being tested
 - admin utility to [change email](https://github.com/decred/politeia/pull/1178) address
-- backend support for [shorter](https://github.com/decred/politeia/issues/900) proposal URLs
+- [short URLs](https://github.com/decred/politeia/issues/900) for proposals
 - arrow key [navigation](https://github.com/decred/politeiagui/pull/1878) for attached images
-- [workaround](https://github.com/decred/politeiagui/pull/1944) for the duplicate comments issue
 - progress towards viewing Politeia with [no javascript](https://github.com/decred/politeiagui/pull/1834) { what's the delivery/deployment status/plans? }
+- two temporary workarounds were implemented to mitigate the annoying duplicate comments bug: one where the expensive file system check is run [once a day](https://github.com/decred/politeia/pull/1205) instead of once an hour, and another where commenting is temporarily [blocked](https://github.com/decred/politeiagui/pull/1944) during the time when the bug would be triggered
 - lots of bug fixes
 
 In progress:
@@ -372,5 +372,5 @@ Your [feedback](https://github.com/xaur/decred-news/blob/docs/contributing.md#fe
 Credits (alphabetical order):
 
 - writing and editing: bee, degeri, l1ndseymm
-- reviews and feedback: {}
+- reviews and feedback: lukebp
 - title image: {}
