--- a/journal/202005.md
+++ b/journal/202005.md
@@ -178,11 +178,15 @@ Community stats:
 
 ## Governance
 
-In May the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) received {n} DCR and spent {n} DCR. Using May's daily average DCR/USD rate of ${n.nn}, this is ${n}K received and ${n}K spent. At April's average daily rate of ${n.nn}, the USD figure billed for work completed in that month is ${n}K. As of {date}, Treasury balance is {n} DCR ({n.nn} million USD at ${n.nn}).
+In May the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) received 13,594 DCR and spent 19,153 DCR. Using May's daily average DCR/USD rate of $14.11, this is $192K received and $270K spent. At April's average daily rate of ${n.nn}, the USD figure billed for work completed in that month is ${n}K. As of Jun 5, Treasury balance is 630,983 DCR (11.4 million USD at $18.12).
+
+There were 5 proposals submitted in May, and 4 of these started voting in early Jun. There was no Politeia proposal voting in May.
+
+The new proposals are described in [Issue 31](https://blockcommons.red/politeia-digest/issue031/) of Politeia Digest.
 
 {high level recap of decision-making activity and most important events. link to Politeia Digest for higher detail}
 
-https://blockcommons.red/politeia-digest/issue031/
+
 
 ## Network
 
