--- a/journal/202005.md
+++ b/journal/202005.md
@@ -298,7 +298,7 @@ Selected articles:
 
 Translations:
 
-- A New Kind of DEX - [in Spahisn](https://medium.com/decred-es/un-nuevo-tipo-de-dex-8d7b5f8681c9) by @francov\_
+- A New Kind of DEX - [in Spanish](https://medium.com/decred-es/un-nuevo-tipo-de-dex-8d7b5f8681c9) by @francov\_
 
 Videos:
 
@@ -312,7 +312,7 @@ Videos:
 - https://www.tokentuber.com/video/what-is-decred-dcr-an-introduction { is this a video? }
 - https://www.youtube.com/watch?v=4fwMXos3u3A { Phoenix Green, good? }
 - Decred bi-Weekly News Update - May 22nd, 2020 by @Exitus ([youtube](https://www.youtube.com/watch?v=9i56ly5SS6M))
-- 365 Decred Days - CoinDesk ([coindesk.com](https://www.coindesk.com/video/365-decred-days)) - includes the Q&A with Lucas Nuzzi at the end, which was not available on YouTube previously. { is there a youtube link? if yes, is it different from coindesk.com? }
+- 365 Decred Days - CoinDesk ([coindesk.com](https://www.coindesk.com/video/365-decred-days)) - includes the Q&A with Lucas Nuzzi at the end, which was not available on YouTube previously. { is there a youtube link? if yes, is it different from coindesk.com? } (Q&A Link - https://youtu.be/Uzf2ZGXWoss)
 
 Audio:
 
