--- a/journal/202005.md
+++ b/journal/202005.md
@@ -178,7 +178,7 @@ Community stats:
 
 ## Governance
 
-In May the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) received 13,594 DCR and spent 19,153 DCR. Using May's daily average DCR/USD rate of $14.11, this is $192K received and $270K spent. At April's average daily rate of ${n.nn}, the USD figure billed for work completed in that month is ${n}K. As of Jun 5, Treasury balance is 630,983 DCR (11.4 million USD at $18.12).
+In May the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) received 13,594 DCR and spent 19,153 DCR. Using May's daily average DCR/USD rate of $14.11, this is $192K received and $270K spent. At April's average daily rate of $13.40, the USD figure billed for work completed in that month is $257K. As of Jun 5, Treasury balance is 630,983 DCR (11.4 million USD at $18.12).
 
 There were 5 proposals submitted in May, and 4 of these started voting in early Jun. There was no Politeia proposal voting in May.
 
