--- a/journal/202005.md
+++ b/journal/202005.md
@@ -153,7 +153,7 @@ Other:
 - Bug Bounty website posted a new [update](https://bounty.decred.org/2020/05/status-update/): a total of 123 submissions have been processed (+19), with 13 of them being eligible for a payout (+2).
 - Some developers are more active on Twitter now with the dev updates. You can follow [@lukebp_](https://twitter.com/lukebp_), [@marco_peereboom](https://twitter.com/marco_peereboom), [@degeri_crypto](https://twitter.com/degeri_crypto), and others to get more of those.
 
-Dev activity stats for May: {n} active PRs, {n} master commits, {n}K added and {n}K deleted lines spread across {n} repositories. Contributions came from {n}-{n} developers per repository.
+Dev activity stats for May (approximate): ~300 active PRs, ~340 master commits, ~51K added and ~26K deleted lines spread across 16 repositories (note: line counts exclude Decrediton [#2481](https://github.com/decred/decrediton/pull/2481) that reformats the whole repository). Contributions came from 2-10 developers per repository.
 
 ## People
 
