--- a/journal/202005.md
+++ b/journal/202005.md
@@ -382,6 +382,6 @@ Your [feedback](https://github.com/xaur/decred-news/blob/docs/contributing.md#fe
 
 Credits (alphabetical order):
 
-- writing and editing: bee, degeri, l1ndseymm
+- writing and editing: bee, degeri, Exitus, l1ndseymm, richardred
 - reviews and feedback: lukebp
 - title image: {}
