Dev ln feedback matheusd

--- a/journal/202005.md
+++ b/journal/202005.md
@@ -82,7 +82,7 @@ v1.1 release candidate is ready for testing! This release includes [reworked](ht
 
 [dcrlnd](https://github.com/decred/dcrlnd):
 
-- @matheusd posted a [demo](https://twitter.com/matheusd_tech/status/1263118566418776065) of swapping between BTC and DCR invoices across their respective LNs { wow, any more details? is this effectively swapping BTC for DCR? } 
+- @matheusd posted a [demo](https://twitter.com/matheusd_tech/status/1263118566418776065) of swapping between BTC and DCR invoices across their respective LNs. This is effectively an "instant exchange", except it is using LN and is non-custodial. Note that this prototype has a known gaming vector and more R&D is required to resolve it (ideally based on [PTLCs](https://suredbits.com/payment-points-monotone-access-structures/), but it is quite far away in the future). More details in [this chat](https://matrix.to/#/!LtiDnUlfuRJMekjFSx:decred.org/$ILkQ49LXwBrUcMq5R_JRIkTcjR7FG9lxwMWsxDve2K0).
 
 [dcrdex](https://github.com/decred/dcrdex): Highlights:
 
@@ -383,5 +383,5 @@ Your [feedback](https://github.com/xaur/decred-news/blob/docs/contributing.md#fe
 Credits (alphabetical order):
 
 - writing and editing: bee, degeri, Exitus, l1ndseymm, richardred
-- reviews and feedback: lukebp
+- reviews and feedback: lukebp, matheusd
 - title image: {}
