Dev feedback dnldd

--- a/journal/202005.md
+++ b/journal/202005.md
@@ -86,7 +86,7 @@ v1.1 release candidate is ready for testing! This release includes [reworked](ht
 
 [dcrdex](https://github.com/decred/dcrdex): Highlights:
 
-- graceful handling of [trade suspension](https://github.com/decred/dcrdex/pull/287) { please explain }
+- graceful handling of [trade suspension](https://github.com/decred/dcrdex/pull/287) that is used for updating the server
 - [sign out](https://github.com/decred/dcrdex/pull/347) action
 - showing [more details](https://github.com/decred/dcrdex/pull/378) for user's orders
 - showing [epoch](https://github.com/decred/dcrdex/pull/348) limit orders on depth chart { what is "epoch limit order"? }
@@ -383,5 +383,5 @@ Your [feedback](https://github.com/xaur/decred-news/blob/docs/contributing.md#fe
 Credits (alphabetical order):
 
 - writing and editing: bee, degeri, Exitus, l1ndseymm, richardred
-- reviews and feedback: lukebp, matheusd
+- reviews and feedback: dnldd, lukebp, matheusd
 - title image: {}
