--- a/journal/202005.md
+++ b/journal/202005.md
@@ -28,7 +28,7 @@ In progress:
 [dcrwallet](https://github.com/decred/dcrwallet):
 
 - added client [package](https://github.com/decred/dcrwallet/pull/1726) for JSON-RPC calls
-- ability to request blocks [concurrently](https://github.com/decred/dcrwallet/pull/1730) { is it a major speedup in SPV mode? any comment appreciated }
+- ability to request multiple blocks from the same peer [concurrently](https://github.com/decred/dcrwallet/pull/1730) (one of the needed changes for SPV support in dcrlnd)
 - ability to save [per-ticket](https://github.com/decred/dcrwallet/pull/1737) vote preferences (step towards ticket-based VSP)
 
 In progress:
@@ -377,5 +377,5 @@ Your [feedback](https://github.com/xaur/decred-news/blob/docs/contributing.md#fe
 Credits (alphabetical order):
 
 - writing and editing: bee, degeri, Exitus, l1ndseymm, richardred
-- reviews and feedback: dnldd, jholdstock, lukebp, matheusd
+- reviews and feedback: dnldd, jholdstock, jrick, lukebp, matheusd
 - title image: {}
