--- a/journal/202005.md
+++ b/journal/202005.md
@@ -182,26 +182,9 @@ The new proposals are described in [issue 31](https://blockcommons.red/politeia-
 
 ## Network
 
-{ hint:
+Hashrate: [May's hashrate](https://explorer.dcrdata.org/charts?chart=hashrate&zoom=k9nb7wvw-kavn2b1a&scale=linear&bin=block&axis=time) opened at ~357 Ph/s and closed ~386 Ph/s, bottoming at 260 Ph/s and peaking at 541 Ph/s throughout the month. Pool [hashrate distribution](https://dcrstats.com/pow) as of Jun 1: UUPool 38%, Poolin 18%, lab.antpool.com 12%, F2Pool 1.5%, Luxor 1.3%, BTC.com 1.3%, BeePool 0.1%, CoinMine 0.03%, Suprnova 0.02% and others ~28%. Pool distribution numbers are approximate and cannot be accurately determined.
 
-- check dcrdata.org (preferred), dcrstats.com and charts.dcr.farm to get the numbers
-- use the same `zoom` parameter for all dcrdata links }
-
-Hashrate: [May's hashrate](https://explorer.dcrdata.org/charts?chart=hashrate&zoom=k9nb7wvw-kavn2b1a&scale=linear&bin=block&axis=time) opened at ~357 Ph/s and closed ~386 Ph/s, bottoming at 260 Ph/s and peaking at 541 Ph/s throughout the month. Pool [hashrate distribution](https://dcrstats.com/pow) as of June 1: UUPool 38%, Poolin 18.5%, lab.antpool.com 11.5%, F2Pool 1.5%, Luxor 1.25%, BTC.com 1.25%, BeePool 0.09%, CoinMine 0.03%, Suprnova 0.02% and others ~27.8%. Pool distribution numbers are approximate and cannot be accurately determined.
-
-Staking: [30-day average](https://dcrstats.com/) ticket price was 141.48 DCR (+3.68). The [price](https://explorer.dcrdata.org/charts?chart=ticket-price&zoom=k9nb7wvw-kavn2b1a&bin=window&axis=time&visibility=true-false&mode=stepped) varied between 132.8-159.1 DCR. [Locked amount](https://explorer.dcrdata.org/charts?chart=ticket-pool-value&zoom=k9nb7wvw-kavn2b1a&scale=linear&bin=block&axis=time&visibility=true-false&mode=stepped) was 5.59-5.8 million DCR, which corresponded to 48.7-50.2% of the available supply [participating](https://explorer.dcrdata.org/charts?chart=stake-participation&zoom=k9nb7wvw-kavn2b1a&scale=linear&bin=block&axis=time&visibility=true-false) in PoS.
-
-{ hint: second source for locked %: https://charts.dcr.farm/d/000000003/proof-of-stake?orgId=1&from=now-40d&to=now }
-
-{recap of ticket price action if it was interesting}
-
-{ hint: consider keeping Block size and Transactions sections every 2nd or 3rd month, unless there is something interesting to report }
-
-Block size: This month, the blockchain size grew by {n} MB. [Block size](https://explorer.dcrdata.org/charts?chart=block-size&bin=block&axis=time) {set zoom to show the month} varied between {n.n}-{n.n} with an average of {n.n} KB. {any interesting fact about this month's blocks}
-
-Transactions: In May, Decred users made {n} regular transactions and bought {n} tickets. {n} tickets were rewarded for voting and {n} were revoked. On average, there were {n} regular DCR transactions and {n} new tickets per day.
-
-{ hint: for dcr.farm set the zoom to show exactly UTC month 1st 00:00:00 - next month 1st 00:00:00 }
+Staking: [30-day average](https://dcrstats.com/) ticket price was 141.5 DCR (+3.7). The [price](https://explorer.dcrdata.org/charts?chart=ticket-price&zoom=k9nb7wvw-kavn2b1a&bin=window&axis=time&visibility=true-false&mode=stepped) varied between 132.9-159.2 DCR. [Locked amount](https://explorer.dcrdata.org/charts?chart=ticket-pool-value&zoom=k9nb7wvw-kavn2b1a&scale=linear&bin=block&axis=time) was 5.59-5.80 million DCR, which corresponded to 48.7-50.3% of the available supply [participating](https://explorer.dcrdata.org/charts?chart=stake-participation&zoom=k9nb7wvw-kavn2b1a&scale=linear&bin=block&axis=time) in PoS.
 
 Nodes: Throughout [May](https://charts.dcr.farm/d/000000014/nodes?orgId=1&from=1588291200000&to=1590969600000) {set zoom to show the month} there was an average of {} public listening nodes and {} total nodes per dcr.farm. Version distribution: {vx.y.z: n% (+n%), ...}.
 
