--- a/journal/202005.md
+++ b/journal/202005.md
@@ -244,11 +244,12 @@ Upcoming:
 
 Selected articles:
 
-- https://medium.com/@permabullnino/decred-on-chain-mining-pulse-3b28d5155a04
-- https://medium.com/coinmonks/decred-price-a-seasonality-study-414bac98bc99 { keep in Markets only or also a copy here? }
-- https://twitter.com/svitekpavel/status/1261922070537125888 { looks interesting, is there a public link? }
-- https://formalverification.substack.com/p/in-the-network-decred
-- https://github.com/monsieurbulb/forksintheroad/blob/master/Decred_forks_in_the_road.md
+- Decred On-Chain: Mining Pulse by @permabullnino ([medium](https://medium.com/@permabullnino/decred-on-chain-mining-pulse-3b28d5155a04))
+- https://medium.com/coinmonks/decred-price-a-seasonality-study-414bac98bc99 { keep in Markets only or also a copy here? rr: tough call, I would lean towards including all worthwhile articles about Decred here even if they also appear somewhere else}
+- https://twitter.com/svitekpavel/status/1261922070537125888 { looks interesting, is there a public link? rr: he's referring to Our Network, the charts are from there}
+- In the network - Decred by Lewis Harland ([formalverification](https://formalverification.substack.com/p/in-the-network-decred))
+- A more private way to stake by @jholdstock ([blog.decred.org](https://blog.decred.org/2020/06/02/A-More-Private-Way-to-Stake/))
+- Decred. Forks in the road ([github](https://github.com/monsieurbulb/forksintheroad/blob/master/Decred_forks_in_the_road.md))
 
 Translations:
 
@@ -260,20 +261,22 @@ Videos:
 - Decred Construct Feat. Devs Luke Powell & Matheus Degiovani on Politeia + LN - Consensus 2020 ([youtube](https://www.youtube.com/watch?v=HexsUmqA7-Y))
 - Decred Construct DEX Interview Feat. Devs Brian Stafford and Jon Chappelow - Consensus 2020 ([youtube](https://www.youtube.com/watch?v=fS9j7RaawjY))
 - Trade Secrets Feat. Decred On-Chain Analyst Checkmate - Consensus 2020 ([youtube](https://www.youtube.com/watch?v=NOyyAx6Ab_0)) - @Checkmate talking about HODL conviction signals, realized price and MVRV, 142-day sum of USD ticket value, block subsidy valuation, transaction demand, and Treasury flows
-- Decred Changelog Overview Feat. Project Lead Jake Yocom-Piatt - Consensus 2020 ([youtube](https://www.youtube.com/watch?v=OmwI62HZerg))
+- Decred Changelog Overview Feat. Project Lead Jake Yocom-Piatt - Consensus 2020 ([youtube](https://www.youtube.com/watch?v=OmwI62HZerg)) with Q&A ([youtube](https://youtu.be/Uzf2ZGXWoss))
+- 365 Decred Days - CoinDesk ([coindesk.com](https://www.coindesk.com/video/365-decred-days)) - This is the full Decred Foundations program from the coindesk website, they broadcast it through Zoom so the quality is not as good as the YouTube uploads above.
 - Bull Case For Decred, On Chain Metrics & Monetary Premiums With Checkmatey ([youtube](https://www.youtube.com/watch?v=QWfq1tn8xs0)) { is it a rehash of an earlier video? }
 - Strategy & Governance Akin Sawyerr joins @JillMalandrino on @Nasdaq \#TradeTalks to discuss governance on the blockchain to build a fairer financial system for all. ([pscp.tv](https://www.pscp.tv/w/cY2NlDFvUEVMT1hMTHJ5amR8MW1yeG1RYWtQQk54eWbqoHSgE5RIg1XnvVTTODa3xIsPRngDk6gQdiXMFut-)) { is there a youtube link? }
 - https://www.tokentuber.com/video/what-is-decred-dcr-an-introduction { is this a video? }
 - https://www.youtube.com/watch?v=4fwMXos3u3A { Phoenix Green, good? }
 - Decred bi-Weekly News Update - May 22nd, 2020 by @Exitus ([youtube](https://www.youtube.com/watch?v=9i56ly5SS6M))
-- 365 Decred Days - CoinDesk ([coindesk.com](https://www.coindesk.com/video/365-decred-days)) - includes the Q&A with Lucas Nuzzi at the end, which was not available on YouTube previously. { is there a youtube link? if yes, is it different from coindesk.com? } (Q&A Link - https://youtu.be/Uzf2ZGXWoss)
+- 
 
 Audio:
 
-- https://tomluongo.me/2020/05/19/podcast-episode-34-jake-yocom-piatt-and-the-case-for-a-return-to-sovereign-money/
+- Gold Goats N Guns Podcast Episode #34 – Jake Yocom-Piatt and the Case for a Return to Sovereign Money ([tomluongo.me](https://tomluongo.me/2020/05/19/podcast-episode-34-jake-yocom-piatt-and-the-case-for-a-return-to-sovereign-money/))
   - { a couple good reviews: https://twitter.com/TFL1728/status/1262747582742159367 https://medium.com/@decreddrive/the-decred-drive-may-21-9f971559e3a9 }
 - https://decredindepth.libsyn.com/chappj-buck-the-decred-dex
-- https://roughconsensus.libsyn.com/episode-6-narratives-with-seth-simmons
+- Decred in Depth Ep. 25 - @raedah talks about years working on Decred, from contributing to DCP-0001 and dcrdata, to newer projects like mobile wallets, forming a group with African and Asian devs, and the new Planet Decred proposal. ([soundcloud](https://soundcloud.com/decredindepth/raedah-planet-decred-dcr))
+- Rough Consensus Ep. 6 Narratives with Seth Simmons - Seth joins the spidey crew to talk about how narratives drive the cryptocurrency space. ([libsyn](https://roughconsensus.libsyn.com/episode-6-narratives-with-seth-simmons))
 
 ## Community Discussions
 
@@ -294,6 +297,9 @@ Selected Twitter discussions:
 - { more dev exposure on Twitter, nice! } https://twitter.com/lukebp_/status/1258139602516193280
 - @lukebp explains Politeia, CMS and the DCC process in few short tweets https://twitter.com/lukebp_/status/1262871839035977728
 - @lukebp's translation of @moo31337 console output [to English](https://twitter.com/lukebp_/status/1263213648471707648) received an unusual amount of likes and replies discussing the mechanics of voting on Treasury transactions.
+- @chappjc makes the dcrdex testnet pre-alpha [official](https://twitter.com/chappjc/status/1267115398610255874).
+- @vctt shows a [preview](https://twitter.com/_vctt/status/1265397168317366283) of what mixing looks like in Decrediton.
+- Updated DCR market [charts](https://twitter.com/BlockCommons/status/1265379141995712512) following the end of MM activity, from @richardred.
 
 ## Markets
 
