--- a/journal/202005.md
+++ b/journal/202005.md
@@ -224,13 +224,24 @@ News coverage secured by Monde PR:
 
 Attended:
 
-- Apr 2 - { Dominic: DecredCN and Walicj.com jointly organized an AMA in WeChat group, mainly introducing Decred's governance model, atomic exchange, and DCRDEX. https://twitter.com/DecredCN/status/1245279133082324997 , Event record: http://walicj.com/#/layout/article_detail/16720 } (_missed in April_)
-- { Bitconf Live videos }
-- May 6 - Charla Introductoria Bitcoin & Blockchain + Decred (Crypto Resources) https://www.youtube.com/watch?v=x2QUGV4ezZQ { @elian what is this event and what's the summary of topics covered? }
+- Apr 2 - [AMA with Walicj.com](https://twitter.com/DecredCN/status/1245279133082324997) - Internet. DecredCN and Walicj.com jointly organized an AMA in WeChat group, mainly introducing Decred's governance model, atomic swaps, and dcrdex. The record was [posted](http://walicj.com/#/layout/article_detail/16720) at their site. (_missed in April_)
+- Apr 23 - [Jueves CryptoDrinks Decred](https://twitter.com/Decred_ES/status/1253427311707213824) - Internet. [@elian](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$158898257628136ERmQY:decred.org): "It was a very casual video call with community members of Blockchain Land and Decred was one of the hosts of the call. I gave a small brief on the project and the rest was answering questions about crypto in general (where to buy, how to store, how to spot scams, thoughts on the halving, strategies for trading and if mining is profitable). It lasted for one hour and half and there were a peak of 25 assistants and average of 20." (_missed in April_)
+- Apr 28 - [Panel on Cryptosecurity](https://twitter.com/elianhuesca/status/1255293877373800448) - Internet. [@elian](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$158898257628136ERmQY:decred.org): "It was organised by Binance in Spanish and it was a sort of AMA but on crypto security, the questions were around how to store and OPSEC best practices. I got several opportunities to highlight Decred's work on hybrid blockchains, DEX, open source software and hard fork resistance. There was a very good response from both the audience and the other guests of the AMA." (_missed in April_)
+- May 2 - [Bitconf Live](https://www.eventbrite.com.br/e/bitconf-live-edition-tickets-103094542552) - Internet. Decred was a sponsor. João Ferreira (@girino) talked about "Decentralization and Governance", DEX, atomic swaps and Politeia, and this talk was watched by [~2,500](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$158859699024140OzoCg:decred.org) people. The videos are available on [Facebook](https://www.bitconf.com.br/portal/2020/05/03/assista-as-palestras-da-bitconf-live-edition/) and on [Decred Brasil](https://www.youtube.com/channel/UC73wa2ddXuPWsmenVfeFTYg) YouTube channel. { @emiliomann was Fausto Botelho's Bitconf Live talk about Decred? shall we mention it? if yes, what was it about? }
+- May 6 - Crypto Resources Livestream - Internet. The stream was about 2 hours long and was watched by ~300 people. @camilolwi introduced blockchains and Bitcoin, and then @elian talked about Decred for almost an hour. ([video](https://www.youtube.com/watch?v=x2QUGV4ezZQ))
+- May 7 - [Hablemos Decred 5](https://twitter.com/elianhuesca/status/1258412805184786439) - Internet. { @elian please confirm it happened, and who was the guest? }
+- May 12 - [Consensus Distributed](https://www.coindesk.com/events/consensus-2020) - Internet. Decred was represented by talks from @lukebp on Politeia, @matheusd on LN, @chappjc and @buck54321 on dcrdex and dcrdata, @Checkmate on on-chain insights, and finally @jy-p with an overview of 1 year of Decred development. All links in the [Media](#media) section below.
+- May 13 - [Digital Governance](https://twitter.com/Decred_ES/status/1260574384667983875) - Internet. Co-organized with [Hack por la Paz](https://www.facebook.com/HackporlaPaz/). { @elian please confirm it happened }
+- May 14 - [Decentralized Governance Panel](https://twitter.com/Decred_ES/status/1258905004510973953) - Internet. @caibarrad and @adcade represented Decred in the panel "What is decentralized governance and DAOs?", which was co-organized with BlockchainEx and was part of the development of Decred ecosystem in Colombia. ([video](https://www.youtube.com/watch?v=Pvqp_1skrxM))
+- May 14 - [BlockConf Meetup](https://twitter.com/Decred_ES/status/1258165218204618759) - Internet. { @elian please confirm it happend, any info is welcome }
+- May 16 - [Open-Source Funding Webinar](https://twitter.com/Decred_ES/status/1259984598102093828) - Internet. @victorarubin and @tomee co-organized the event with Hack Space Peru as part of outreach in the region. @pablito gave a presentation about one of the biggest challenges of open-source software, funding, explored more than a dozen approaches and finally introduced the Decred solution. ([video](https://www.youtube.com/watch?v=UVtOBAAerXk)) { @pablito very interesting, is there an English version/subtitles? }
+- May 19 - [Latoken Blockchain Economic Forum](https://latoken.com/events/Keynote-133) - Internet. @elian gave a 36-minute keynote about Decred. ([video](https://www.youtube.com/watch?v=xZvp0us44wo))
+- May 20 - Bitcoin and Crypto Panel - Internet. [@elian](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$159001320735424sZqPg:decred.org): "I was on a panel on Bitcoin and cryptocurrency use cases as part of Business Land at Talent Land, and highlighted Politeia and dcrtime as FOSS infrastructure with cases for government and enterprises, and how the DAO pays it's global workforce. Also talked about the remittance market for DCR and payment processing infrastructure for increasing adoption." ([video](https://www.youtube.com/watch?v=gmWSmxb5yvg))
+- May 25 - [BlockConf Digital](https://blockconf.digital/) - Internet. Decred was a [bronze sponsor](https://twitter.com/BlockconfD/status/1251194332079697922). Decred Latam team ran a virtual booth for Decred to answer questions from the attendees during a 48-hour event. { @elian please confirm it happend, anything to mention? }
 
 Upcoming:
 
-- {dates} - [{title}]({event link}) - {city}, {country}. {info}
+- { any known upcoming events? }
 
 {announcements in Events domain}
 
