--- a/journal/202006.md
+++ b/journal/202006.md
@@ -108,11 +108,18 @@ Nodes: Throughout [June](https://charts.dcr.farm/d/000000014/nodes?orgId=1&from=
 
 {any interesting analysis or events in the network}
 
+- onchain vol uptick https://twitter.com/_Checkmatey_/status/1269825167133306881
+
 ## Integrations
 
 { hint: new pieces of infrastructure or updates from existing: VSPs, exchanges, wallets, OTC desks, payment processors. use bullets or paragraphs, whatever looks best in a given month's compilation }
 
 { check https://github.com/decred/dcrwebapi/commits/master for changes to the VSP list }
+
+- delisted from CoinPayments
+  - https://twitter.com/CoinPaymentsNET/status/1264645627750649856
+  - https://twitter.com/CoinPaymentsNET/status/1268925474052268032
+  - https://twitter.com/CryptoEmporium_/status/1268860197038166016
 
 Warning: the authors of the Decred Journal have no idea about the trustworthiness of any of the services above. Please do your own research before trusting your personal information or assets to any entity.
 
@@ -127,6 +134,10 @@ Warning: the authors of the Decred Journal have no idea about the trustworthines
 ## Outreach
 
 {overview of outreach/communications/marketing/PR activity for past month and any short-term plans}
+
+{ PR work? listing just just in case }
+
+- https://cointelegraph.com/news/bitcoin-still-faces-on-chain-scaling-trouble-ahead-decred-co-founder-says
 
 ## Events
 
@@ -150,7 +161,9 @@ Upcoming:
 
 Selected articles:
 
-- {}
+- https://blockcommons.red/post/dcr-on-chain-1/ {+intro}
+- https://medium.com/decred/decred-on-chain-realised-cap-mvrv-ratio-and-gradient-oscillators-a36ed2cc8182 {+network}
+- https://medium.com/@Ammarooni/why-we-need-decred-an-inclusive-approach-to-sound-money-db2f990c107b
 
 Translations:
 
@@ -158,7 +171,9 @@ Translations:
 
 Videos:
 
-- {}
+- https://twitter.com/OfficialCryptos/status/1268526574841876481
+- https://twitter.com/Bitcoin/status/1269313539056922624
+- stakey awakens https://www.youtube.com/watch?v=LHgGyoDcFPI
 
 Audio:
 
@@ -178,7 +193,7 @@ Selected Reddit posts:
 
 Selected Twitter discussions:
 
-- {}
+- @moo31337 dropped a teaser bomb https://twitter.com/marco_peereboom/status/1271200577272385538
 
 ## Markets
 
