--- a/journal/202006.md
+++ b/journal/202006.md
@@ -26,7 +26,9 @@ Unless otherwise noted, the work reported here has the "merged to master" status
 
 [dcrstakepool](https://github.com/decred/dcrstakepool): {}
 
-[dcrpool](https://github.com/decred/dcrpool): {}
+[dcrpool](https://github.com/decred/dcrpool):
+
+- v1.1.0 RC2 https://github.com/decred/dcrpool/releases/tag/v1.1.0-rc2
 
 [dcrlnd](https://github.com/decred/dcrlnd): {}
 
@@ -87,6 +89,13 @@ In June the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDc
 
 {high level recap of decision-making activity and most important events. link to Politeia Digest for higher detail}
 
+- { is 98% approval for bug bounty 3 a new record? }
+- { A better name for Decred + mention Twitter spam https://www.reddit.com/r/decred/comments/hh2ult/a_better_name_for_decred_to_broaden_the_reach_of/fwbfmst/ }
+
+- https://blockcommons.red/politeia-digest/issue032/
+
+To get notified when new proposals are published or go to vote you can follow [@pi_crumbs](https://twitter.com/pi_crumbs) on Twitter.
+
 ## Network
 
 { hint:
@@ -120,11 +129,17 @@ Nodes: Throughout [June](https://charts.dcr.farm/d/000000014/nodes?orgId=1&from=
   - 465K of the 840K [founders premine](https://docs.decred.org/advanced/premine/#bring-up-costs) remains untouched
   - 290K of the 840K [airdrop](https://docs.decred.org/advanced/premine/#airdrop) coins did not move as well
   - ~27% of the 345K DCR paid by the Treasury to contractors was not touched since the contractor received it, ~24% was staked, ~24% ended up in a known exchange address, ~1.7% was mixed
-  - 
+  - out of ~5.8M DCR PoW rewards, 60% ended up on addresses associated with exchanges, 10% has been staked
+- https://twitter.com/PermabullNino/status/1278055245050855424
+- https://twitter.com/PermabullNino/status/1272510826210000896
+  - ticket pool inflows/outflows, Strong Hand ratio, staking momentum
+- https://ournetwork.substack.com/p/our-network-issue-27
 
 ## Integrations
 
 { hint: new pieces of infrastructure or updates from existing: VSPs, exchanges, wallets, OTC desks, payment processors. use bullets or paragraphs, whatever looks best in a given month's compilation }
+
+- Hotbit investment product https://twitter.com/Hotbit_news/status/1270663744536928262 { any detail on how it works welcome }
 
 - https://www.reddit.com/r/decred/comments/hbofz4/tired_of_keeping_track_of_your_staking_activities/
 
@@ -149,9 +164,16 @@ Warning: the authors of the Decred Journal have no idea about the trustworthines
 
 {overview of outreach/communications/marketing/PR activity for past month and any short-term plans}
 
-{ PR work? listing just just in case }
+- https://www.reddit.com/r/decred/comments/hbb3iz/decred_grassroots_marketing_campaign/
+- https://www.reddit.com/r/decred/comments/hbp6y4/forward_thinking_friday_1_moving_the_peg_forwards/ { Outreach or Comm Disc? }
+- https://www.reddit.com/r/decred/comments/hg2a9k/forward_thinking_friday_decred_narratives_26_june/
+- https://twitter.com/hashtag/DidYouKnowDecred
+
+{ PR work? listing just in case }
 
 - https://cointelegraph.com/news/bitcoin-still-faces-on-chain-scaling-trouble-ahead-decred-co-founder-says
+- https://cointelegraph.com/news/decred-co-founder-cbdcs-can-facilitate-crony-capitalism
+- https://cointelegraph.com/news/decred-co-founder-calls-paypal-and-crypto-an-odd-combination
 
 ## Events
 
@@ -175,9 +197,11 @@ Upcoming:
 
 Selected articles:
 
-- https://blockcommons.red/post/dcr-on-chain-1/ { mention in intro? }
-- https://medium.com/decred/decred-on-chain-realised-cap-mvrv-ratio-and-gradient-oscillators-a36ed2cc8182 { +network }
+- https://blog.decred.org/2020/06/08/Decred-blockchain-analysis-Part-1/ https://blockcommons.red/post/dcr-on-chain-1/ { mention in intro? }
+- https://medium.com/decred/decred-on-chain-realised-cap-mvrv-ratio-and-gradient-oscillators-a36ed2cc8182
 - https://medium.com/@Ammarooni/why-we-need-decred-an-inclusive-approach-to-sound-money-db2f990c107b
+- https://medium.com/@artikozel/the-decred-node-or-how-i-learned-to-stop-worrying-and-love-the-command-line-part-one-1eca9420a1b2
+- https://es.cointelegraph.com/news/elian-huesca-btc-eth-and-decred-are-part-of-the-greatest-technological-and-economic-revolution-of-our-generation (in Spanish) { @elian how does the title translate and what is it about? }
 
 Translations:
 
@@ -188,17 +212,36 @@ Videos:
 - https://twitter.com/OfficialCryptos/status/1268526574841876481
 - https://twitter.com/Bitcoin/status/1269313539056922624 went quite viral with 41K views, ~900 likes and ~300 retweets.
 - stakey awakens https://www.youtube.com/watch?v=LHgGyoDcFPI
+- Decred bi-Weekly News Update - June 10th, 2020 https://www.youtube.com/watch?v=INKSkBpCT_0
+- Decred bi-Weekly News Update - June 23rd, 2020 https://www.youtube.com/watch?v=4GqdgsgUX7c
+- { check Decred Society channel }
+- Decred Australia Virtual Meetup #2 Feat. On-Chain Analyst Checkmate https://www.youtube.com/watch?v=HbquQIv9EYw
 
-Decred content is now also posted on BitChute as a fallback in case anything happens to the YouTube channel. https://www.bitchute.com/channel/decred/
+> The only thing holding Decred back in my honest opinion is more people coming up with creative ways to shout about it. It is all this thing needs. Because once you get the level of attention, the fundamentals just speak for themselves.
+
+Decred videos are now also posted [on BitChute](https://www.bitchute.com/channel/decred/) as a fallback in case anything happens to the YouTube channel. This is good timing since as expected earlier, YouTube [removed](https://cointelegraph.com/news/youtubes-algorithm-is-punishing-crypto-content-and-no-one-knows-why) a bunch of crypto videos during the COVID-19 wrongthink cleanup.
 
 Audio:
 
-- {}
+- https://decredindepth.libsyn.com/akin-checkmate-mr-bulb-dcr-use-case-growth
+- https://roughconsensus.libsyn.com/episode-7-the-rigged-game
+- https://roughconsensus.libsyn.com/episode-8-talking-macro-with-ammar
+- Zach Segal (Head of Listings at Coinbase) mentioned Decred as an interesting project in Trading Places podcast ([spotify](https://open.spotify.com/episode/7BkEEDgSDPU1XQsmveksgv), short [clip](https://www.youtube.com/watch?v=IDGQsWE3eeg), _missed in May_)
+
+@AGNFAB [announced](https://twitter.com/AGNFAB1/status/1271157067097792514) that some of his artwork will be exclusively available on [decentralizedboutique.com](https://decentralizedboutique.com/?product_cat=art), a new store selling crypto related jewelry and artwork [for crypto](https://decentralizedboutique.com/?page_id=150) (including DCR).
+
+{ who is the author of this artwork? }
+
+- https://twitter.com/aithzakaria1/status/1277021138334502914
+- https://twitter.com/aithzakaria1/status/1277109552857710592
+- https://twitter.com/aithzakaria1/status/1277409807226593282
+- https://twitter.com/aithzakaria1/status/1277472194256347137
 
 ## Community Discussions
 
 Comm systems news:
 
+- Decred's Discord server has been restructured and channels have been grouped into 3 categories: Discord-only channels for a more casual experience compared to Matrix (where many rooms are used as virtual offices to coordinate work), read-only channels bridged to Matrix (as a balance between transparency and productivity in Matrix rooms), and fully bridged rooms #decred-101, #proposals, #support, #ticket-splitting and #trading. { @Exitus anything to add? }
 - { new Telegram support channel https://t.me/DecredSupport bridged to Matrix #support }
 
 {selected discussed topics, as bullet list or one paragraph per topic}
@@ -207,10 +250,16 @@ Selected Reddit posts:
 
 - https://www.reddit.com/r/decred/comments/hbb3iz/decred_grassroots_marketing_campaign/
 - https://www.reddit.com/r/decred/comments/hbp6y4/forward_thinking_friday_1_moving_the_peg_forwards/
+- https://www.reddit.com/r/decred/comments/hghw3a/why_people_do_not_care_about_decred/
+- https://www.reddit.com/r/decred/comments/hd4mwv/decred_skepticism_sunday_21_june_2020/
+- https://www.reddit.com/r/decred/comments/hh7lo2/decred_skepticism_sunday_28_june_2020/
 
 Selected Twitter discussions:
 
-- @moo31337 dropped a teaser bomb https://twitter.com/marco_peereboom/status/1271200577272385538
+- @moo31337 [dropped](https://twitter.com/marco_peereboom/status/1271200577272385538) a teaser bomb about his next proposal
+- @Doctor\_Bitcoin\_ [compared](https://twitter.com/Doctor_Bitcoin_/status/1277352638502375424) Decred to a virtual continent that anyone can join
+- @Checkmate created a new [#DecredChallenge](https://twitter.com/_Checkmatey_/status/1272680543612628997) where you need to guess which metric is shown on the chart.
+- @Mattgetsbarrel1 figured out an ultimate [strategy](https://twitter.com/Mattgetsbarrel1/status/1274072597597024257) to trade DCR.
 
 ## Markets
 
@@ -218,11 +267,18 @@ In June DCR was trading between USD {n.nn}-{n.nn} / BTC {}-{}. The average daily
 
 {markets overview: USD and BTC prices, highs and lows, interesting events, interesting analysis}
 
+- testing realized cap https://twitter.com/PermabullNino/status/1268181399879790592
+- correlation between ticket inflows/outflows and price https://twitter.com/PermabullNino/status/1268270041759432704
+
 ## Relevant External
 
 {cc tech: PoW, ASIC resistance, full nodes, cc network security, etc}
 
 {governance, funding, chain forks, community forks}
+
+Zcash expenses Q4 2019 https://twitter.com/coveryfire7777/status/1276575095809617922
+
+{ USDT surpassed $10B }
 
 {DEX}
 
@@ -230,9 +286,17 @@ In June DCR was trading between USD {n.nn}-{n.nn} / BTC {}-{}. The average daily
 
 {relevant exchanges and websites}
 
+[CoinGecko](https://www.coingecko.com/) partnered with Hacken to add [cybersecurity](https://cointelegraph.com/news/coingecko-adds-crypto-exchanges-cybersecurity-ratings-to-trust-score) ratings for exchanges listed on the site (see Trust Score tab).
+
 { GitHub master branch drama: apparently some people have ran out of important problems to solve and went on to inject their social agenda into established technical terminology https://www.reddit.com/r/programming/comments/h8w36t/github_will_no_longer_use_the_term_master_as/ }
 
 {other: regulations, privacy, security, fun}
+
+Chainalysis [announced](https://cointelegraph.com/news/chainalysis-can-now-track-your-privacy-coins-zcash-dash) the support of Zcash and Dash privacy coins in their products. Vast majority of transactions in these networks can be traced because privacy features are used by very few people. This comes after the May's news of several exchanges [delisting](https://cointelegraph.com/news/another-exchange-delists-monero-amidst-ongoing-sex-scandal) Monero because it is better at protecting users' privacy, and researchers from Carnegie Mellon University claiming they can trace 99%+ Zcash and 30% Monero transactions.
+
+## Submit Your Story for Next DJ
+
+As Decred and wider cryptocurrency ecosystems are expanding it becomes harder to track important events. You can help DJ to capture more relevant stories by submitting them on GitHub. To do that, open [GitHub issues](https://github.com/xaur/decred-news/issues), find one for the next release (e.g. "DJ July 2020") and submit a link with a short description.
 
 ## About This Issue
 
