--- a/journal/202006.md
+++ b/journal/202006.md
@@ -85,7 +85,7 @@ Community stats:
 
 ## Governance
 
-In June the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) received {n} DCR and spent {n} DCR. Using June's daily average DCR/USD rate of ${n.nn}, this is ${n}K received and ${n}K spent. At May's average daily rate of ${n.nn}, the USD figure billed for work completed in that month is ${n}K. As of {date}, Treasury balance is {n} DCR ({n.nn} million USD at ${n.nn}).
+In June the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) received 12,629 DCR and spent 8,340 DCR. Using June's daily average DCR/USD rate of $16.05, this is $203K received and $134K spent. At May's average daily rate of $14.11, the USD figure billed for work completed in that month is $118K. As of Jul 1, Treasury balance is 633,820 DCR (9.08 million USD at $14.32).
 
 {high level recap of decision-making activity and most important events. link to Politeia Digest for higher detail}
 
