--- a/journal/202006.md
+++ b/journal/202006.md
@@ -70,18 +70,17 @@ Congratulations to new contractors granted the Decred Contractor Clearance (DCC)
 
 {interviews about people}
 
-Community stats:
+Community stats as of Jul 2:
 
-- Politeia users: {} (+{})
-- Twitter followers: {} (+{})
-- Reddit subscribers: {} (+{})
-- Matrix users: {} (+{})
+- Twitter followers: 40,517 (+25)
+- Reddit subscribers: 9,854 (+62)
+- Matrix #general users: 622 (-33) (a bunch of old Slack bots removed)
 - Discord users: {}, verified to post: {}
-- Telegram users: {} (+{})
-- YouTube subscribers: {} (+{})
-- Facebook followers: {} (+{}), likes: {} (+{})
-- LinkedIn followers: {} (+{})
-- GitHub dcrd stars: {} (+{}), forks: {} (+{})
+- Telegram users: 2,607 (+4)
+- YouTube subscribers: 4,110 (+80), views: 148K (+4K)
+- Facebook followers: 3,655 (+23), likes: 3,311 (+20)
+- LinkedIn followers: 836 (+26)
+- GitHub dcrd stars: 549 (+6), forks: 241 (+1)
 
 ## Governance
 
