add to notifications note

--- a/journal/202006.md
+++ b/journal/202006.md
@@ -101,7 +101,7 @@ In June the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDc
 
 - https://blockcommons.red/politeia-digest/issue032/
 
-To get notified when new proposals are published or go to vote you can follow [@pi_crumbs](https://twitter.com/pi_crumbs) on Twitter.
+To get notified when new proposals are published or go to vote you can follow [@pi_crumbs](https://twitter.com/pi_crumbs) on Twitter, or set up email notifications on the proposals site.
 
 ## Network
 
