--- a/journal/202006.md
+++ b/journal/202006.md
@@ -317,6 +317,6 @@ Your [feedback](https://github.com/xaur/decred-news/blob/docs/contributing.md#fe
 
 Credits (alphabetical order):
 
-- writing and editing: {}
+- writing and editing: bee, l1ndseymm, richardred
 - reviews and feedback: {}
 - title image: {}
