add gov details

--- a/journal/202006.md
+++ b/journal/202006.md
@@ -103,14 +103,19 @@ Six proposals were voted on in June, with 4 approved and 2 rejected, with relati
 
 The [proposal](https://proposals.decred.org/proposals/4affceb07f5b8126366e8b73ed3d164ebc010bc6fefba19375c4c2e2b252beb0) to sponsor a book (CoinStory) for $500 was rejected with 11.6% approval and 34% turnout, while the TV marketing [proposal](https://proposals.decred.org/proposals/9eaafc20f206776e38642e272233390f351c5562c3835369a558cc7d7e341018) had 8% approval and 29% turnout.
 
+Politeia Digest issue [#32](https://blockcommons.red/politeia-digest/issue032/) has further details on all of the above.
+
+A new [proposal](https://proposals.decred.org/proposals/df11d7ac85061e6a02d6503555e585a1a37fffd82101eeea14670537c951926f) from @ivandecredfan for Russian content production was published in Jun and started voting in July. @ivandecredfan submitted a similar [proposal](https://proposals.decred.org/proposals/92e3f2176b332c1aea5887acd2324c2cd730ec450e563df52ddae9d5927d5d36) in Feb which was rejected with 21% approval, but stuck with his video production and took some feedback from commenters on the first proposal on board.
+
+A proposal has been submitted which suggests choosing a new name for the project ("Bitcoin Evolution"). The Politeia admins indicated that the proposal owner (@decredinator) should add a budget and implementation plan before the proposal would be considered valid for publication on the proposals site. @decredinator [posted](https://www.reddit.com/r/decred/comments/hh2ult/a_better_name_for_decred_to_broaden_the_reach_of/) the proposal to reddit so that the community can read it and contribute to making it a reality. Most of the comments are not keen on the idea. @decredinator has also been [called out](https://www.reddit.com/r/decred/comments/hh2ult/a_better_name_for_decred_to_broaden_the_reach_of/fwbfmst/ ) for spamming the link to this post across a range of unrelated tweets.
+
+To get notified when new proposals are published or go to vote you can follow [@pi_crumbs](https://twitter.com/pi_crumbs) on Twitter, or set up email notifications on the proposals site.
+
+## 
+
 {high level recap of decision-making activity and most important events. link to Politeia Digest for higher detail}
 
 - { is 98% approval for bug bounty 3 a new record? rr: no it comes in 3rd, we have had two 99%ers}
-- { A better name for Decred + mention Twitter spam https://www.reddit.com/r/decred/comments/hh2ult/a_better_name_for_decred_to_broaden_the_reach_of/fwbfmst/ }
-
-- https://blockcommons.red/politeia-digest/issue032/
-
-To get notified when new proposals are published or go to vote you can follow [@pi_crumbs](https://twitter.com/pi_crumbs) on Twitter, or set up email notifications on the proposals site.
 
 ## Network
 
