--- a/journal/202006.md
+++ b/journal/202006.md
@@ -138,7 +138,7 @@ Block size: This month, the blockchain size grew by {n} MB. [Block size](https:/
 
 Transactions: In June, Decred users made {n} regular transactions and bought {n} tickets. {n} tickets were rewarded for voting and {n} were revoked. On average, there were {n} regular DCR transactions and {n} new tickets per day.
 
-An unusual spike of block size usage (unrelated to large Treasury payout transactions) occurred on May 29-31. Dozens of nearly full [blocks](https://explorer.dcrdata.org/blocks?height=453840&rows=50) were mined with 90-100 KB transactions which consolidated lots of tiny outputs into 6 DCR outputs. On May 31 the blockchain grew by a [record](https://explorer.dcrdata.org/charts?chart=block-size&bin=day&axis=time) 13 MB, compared to an average growth of 4 MB/day. It [looks like](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$15913552414776FisdN:decred.org) a VSP was consolidating ticket fees. Many of the 6 DCR outputs were later [merged](https://explorer.dcrdata.org/tx/ef562befa1f8eeee6250d98b6ccb1722b8fba508dd4919d5b85139df9c761e0c) into a pile of ~240K DCR (~3.4M USD, ~2% supply).
+An unusual spike of block size usage (unrelated to large Treasury payout transactions) occurred on May 29-31. Dozens of nearly full [blocks](https://explorer.dcrdata.org/blocks?height=453840&rows=50) were mined with 90-100 KB transactions which consolidated lots of tiny outputs into 6 DCR outputs. On May 31 the blockchain grew by a [record](https://explorer.dcrdata.org/charts?chart=block-size&bin=day&axis=time) 13 MB, compared to an average growth of 4 MB/day. It [looks like](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$15913552414776FisdN:decred.org) a VSP was consolidating ticket fees. Many of the 6 DCR outputs were later [merged](https://explorer.dcrdata.org/tx/ef562befa1f8eeee6250d98b6ccb1722b8fba508dd4919d5b85139df9c761e0c) into a pile {rr: a pile of credits? do they stack? lol} of ~240K DCR (~3.4M USD, ~2% supply), known to be associated with a popular cryptocurrency exchange. tl;dr a VSP operator sent about 200 DCR (voting fees paid by users of the VSP) to an exchange, it used a lot of block space because it involved thousands of tiny fee payments associated with individual tickets processed by that VSP.
 
 { hint: for dcr.farm set the zoom to show exactly UTC month 1st 00:00:00 - next month 1st 00:00:00 }
 
